battle configarition backend operational ✅| test with comabtTest.sh 🥊